refactor: address SonarCloud maintainability findings
- GrepCommandSafety.tokenize: replace the four `continue` statements with an
  if/else chain so the loop has a single flow (brain-overload).
- RunTestsTool.handlerWaitSeconds: use Math.clamp instead of nested
  Math.max/Math.min (java21).
- GetHighlightsToolNotificationFormatTest: express the expected value as a
  text block instead of string concatenation (java15).
- JsHookEngineTest: collapse the three "git hidden in the command" deny tests
  into a single @ParameterizedTest.

No behaviour change — all four are pure readability refactorings.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>